--- a/cc/scss/components/_widgets.scss
+++ b/cc/scss/components/_widgets.scss
@@ -1639,9 +1639,11 @@
 
   .donate-action {
     align-self: center;
+    flex-shrink: 0;
   }
 
-  .button.donate{
+  .button.donate {
+    display: block;
     padding-left: 8px + 30px + 8px !important;
     padding-right: 8px !important;
     margin-right: 8px;
@@ -1665,7 +1667,7 @@
     @include font-weight($fw-semi-bold);
 
     .donate-text {
-      margin-right: 20px;
+      margin-right: 15px;
     }
   }
 
